[package]
name = "hdc1080-async"
version = "0.1.0"
edition = "2024"
description = "A driver library for interfacing with the HDC1080 hygrometer. Specifically targeted at embedded, no-std environments."
authors = ["Devin Lane"]
license = "MIT"

[dependencies]
defmt = "1.0.1"
embassy-time = "0.5.0"
embedded-hal-async = "1.0.0"
